# uk-jamaat-directory

./: .dockerignore  .env.example  .env.vps.example  .gitignore  .venv  ADMIN_REVIEW.md  AGENTS.md  ATTRIBUTION.md  CONTEXT.md  DATA_LICENSE.md  Dockerfile  EXTRACTOR_VERIFICATION_SCRATCH.md  LICENSE.md  Makefile  PLAN.md  README.md  SCRIPT_REVIEW.md  SECURITY.md  alembic.ini  docker-compose.production.yml  docker-compose.vps.nginx.yml  docker-compose.vps.shared-proxy.yml  docker-compose.vps.yml  docker-compose.yml  opencode.json  pyproject.toml
.cursor/plans/: ai_script_extractors_109e4102.plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_directory_schema.py  002_identity_match_reviews.py  003_add_muslimsinbritain_source_type.py  004_add_oscr_register_source_type.py  005_retire_standard_feed.py  006_repo_extractor_assignments.py  007_authoring_tasks.py  008_authoring_failure_taxonomy.py
deploy/caddy/: Caddyfile  Caddyfile.dev
deploy/nginx/: directory.conf
docs/: test-parallelisation-report.md
docs/adr/: 0001-public-directory-private-operations.md  0002-python-fastapi-postgis.md  0003-source-publication-gates.md  0004-local-first-docker-deployable.md  0005-google-admin-discovery-leads.md  0006-schedule-validation-and-publication.md  0007-crawl-artifacts-extraction.md  0008-bulk-export-snapshots.md  0009-docker-vps-deployment.md  0010-github-publishing-workflow.md  0011-muslimsinbritain-import-policy.md  0012-website-discovery-policy.md  0014-retire-standard-feed.md  0015-ai-extraction-profiles.md  0016-repo-owned-extractor-scripts.md  0017-overnight-extractor-authoring-orchestrator.md  0018-public-release-agpl.md  0019-public-facing-deployment.md  0020-server-rendered-dashboard-admin-ui.md  README.md
docs/api/: ChangeFeedResponse.json  MosqueDetailPublic.json  MosqueListResponse.json  NearbyTimesResponse.json  README.md  SnapshotResponse.json  TimesResponse.json  openapi.json
docs/data/: import-order.md
docs/deploy/: checklist.md  local-overrides.md  restore.md  ubuntu-vps.md
docs/feeds/: standard-feed-v1.md
docs/github/: README.md
scripts/: postgres_preflight.py  run_agent_profiling.py
scripts/deploy/: backup-minio.sh  backup-postgres.sh  compose-args.sh  deploy.sh  migrate.sh  smoke-test.sh
tests/: conftest.py  fixtures.py  test_admin_auth.py  test_admin_authoring.py  test_admin_candidates.py  test_admin_identity.py  test_admin_reporting.py  test_admin_sources.py  test_agent_backends.py  test_ai_client.py  test_ai_profile.py  test_ai_profiler.py  test_app_hardening.py  test_artifact_storage.py  test_authoring_agent.py  test_authoring_discovery.py  test_authoring_orchestrator.py  test_authoring_validator.py  test_charity_commission_discovery.py  test_config.py  test_contributions.py  test_crawl_pipeline.py  test_crawl_register.py  test_deploy_config.py  test_discovery_extended.py  test_discovery_matching.py  test_export_contracts.py  test_export_serialization.py  test_export_service.py  test_export_tasks.py  test_fetch_conditional.py  test_fetch_robots.py  test_fetch_security.py  test_freshness.py  test_github_publishing.py  test_health.py  test_mib_adapter.py  test_mib_backfill.py  test_mib_exporter.py  test_mib_import.py  (+28 more)
(+694 files in other folders)
