[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-jamaat-directory"
version = "0.1.0"
description = "Public UK mosque and jamaat timetable directory"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "boto3>=1.35",
    "celery[redis]>=5.4",
    "fastapi>=0.115",
    "geoalchemy2>=0.15",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "rapidfuzz>=3.10",
    "python-json-logger>=3.2",
    "redis>=5.2",
    "shapely>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
uk-jamaat-directory = "uk_jamaat_directory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_jamaat_directory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/uk_jamaat_directory/api/**" = ["B008"]
# Prompt templates contain one-line commands the agent must copy verbatim.
"src/uk_jamaat_directory/ingest/authoring/authoring_prompt.py" = ["E501"]
