[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-jamaat-directory"
version = "0.1.0"
description = "Public UK mosque and jamaat timetable directory"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "boto3>=1.35",
    "celery[redis]>=5.4",
    "fastapi>=0.115",
    "geoalchemy2>=0.15",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "rapidfuzz>=3.10",
    "python-json-logger>=3.2",
    "redis>=5.2",
    "sentry-sdk[fastapi,celery]>=2.0",
    "shapely>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
uk-jamaat-directory = "uk_jamaat_directory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_jamaat_directory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/uk_jamaat_directory/api/**" = ["B008"]
# Prompt templates contain one-line commands the agent must copy verbatim.
"src/uk_jamaat_directory/ingest/authoring/authoring_prompt.py" = ["E501"]
# Machine-authored extractor scripts: validated by the repo-extractor gates
# (static/capability/contract/output), not by hand-written-code style rules.
# Real-bug pyflakes rules (F821 etc.) stay active; cosmetic/loop-idiom noise is ignored.
"src/uk_jamaat_directory/ingest/extract/repo_extractors/scripts/**" = [
    "E501",
    "F841",
    "B007",
    "B023",
    "B905",
    "B020",
    "E722",
    "E741",
]
